--- a/VHDLGenerator/Views/Window_Datapath.xaml
+++ b/VHDLGenerator/Views/Window_Datapath.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:VHDLGenerator.Views"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="Create Datapath" Height="600" Width="800">
+        Title="Create Datapath" Height="600" Width="600" MinHeight="600" MinWidth="600">
     <Grid>
 
         <!-- Grid Split into 2 sections. The first is for the name and behavourial. The second is for the table-->
@@ -15,7 +15,7 @@
             <RowDefinition Height="4*"/>
             <RowDefinition Height="4*"/>
             <RowDefinition Height="*"/>
-            
+
         </Grid.RowDefinitions>
 
         <!-- For name and behavourial-->
@@ -27,16 +27,16 @@
             </Grid.RowDefinitions>
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="150*"/>
-                <ColumnDefinition Width="115*"/>
-                <ColumnDefinition Width="529*"/>
+                <ColumnDefinition Width="4*"/>
+                <ColumnDefinition Width="5*"/>
+              
             </Grid.ColumnDefinitions>
 
 
             <!-- Left side of the first Grid -->
             <Label
                 Grid.Row="0"
-                Grid.Column="1"
+                Grid.Column="0"
                 Content="Entity Name"
                 VerticalAlignment="Center"
                 HorizontalAlignment="Right"
@@ -44,7 +44,7 @@
 
             <Label
                 Grid.Row="1"
-                Grid.Column="1"
+                Grid.Column="0"
                 Content="Architecture Name"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Center" 
@@ -54,8 +54,11 @@
             <TextBox 
                 Name="EntityNameTB"
                 Grid.Row="0"
-                Grid.Column="2"
-                Margin="60,15,250,15"
+                Grid.Column="1"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Left"
+                Width="150"
+                Margin="35,0"
                 Background="WhiteSmoke"
                 Text="{Binding Path=EntityNameTxt , ValidatesOnDataErrors=True ,UpdateSourceTrigger=PropertyChanged}"
                 ToolTip="{Binding Path=ErrorCollection[EntityNameTxt]}"
@@ -64,8 +67,11 @@
             <TextBox
                 Name="ArchNameTB"
                 Grid.Row="1"
-                Grid.Column="2"
-                Margin="60,15,250,15"
+                Grid.Column="1"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Left"
+                Width="150"
+                Margin="35,0"
                 Background="WhiteSmoke"
                 Text="{Binding Path=ArchNameTxt}"
             />
@@ -75,7 +81,7 @@
         <!-- For Port Definitions-->
         <Grid Grid.Row="1">
             <!-- Port Definition Stack Panel -->
-            <StackPanel Orientation="Vertical" Margin="200,0">
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
 
                 <!-- Main Stack Panel -->
 
@@ -97,7 +103,7 @@
                     />
                     <TextBox
                        Name="PortName_TB"
-                       Width="200"
+                       Width="145"
                        Margin="30,5"
                        Text="{Binding Path=PortNameTxt , ValidatesOnDataErrors=True ,UpdateSourceTrigger=PropertyChanged}"
                        ToolTip="{Binding Path=ErrorCollection[PortNameTxt]}"
@@ -111,8 +117,8 @@
                         Width="150"
                         HorizontalContentAlignment="Right"
                     />
-                    
-                    <ComboBox Name="Direction_CB" Width="100" Margin="30,5" 
+
+                    <ComboBox Name="Direction_CB" Width="55" Margin="30,5" 
                               SelectedValue="{Binding Path=DirectionSel , ValidatesOnDataErrors=True ,UpdateSourceTrigger=PropertyChanged}"
                               ItemsSource="{Binding Path=GetDirections}"
                               ToolTip="{Binding Path=ErrorCollection[DirectionSel]}"
@@ -169,8 +175,9 @@
 
                 <Button
                     Name="AddPort"
-                    Margin="150,12"
+                    Width="70"
                     Height="20"
+                    Margin="0,10"
                     Content="Add Port"
                     Click="AddPort_Click"
                     IsEnabled="{Binding Path=AddPortEnable}"
@@ -182,9 +189,9 @@
         <!-- For Port datagrid -->
         <Grid Grid.Row="2" Margin="0,10">
 
-           
-                
-        <!-- DataGrid to display the port data -->
+
+
+            <!-- DataGrid to display the port data -->
             <DataGrid Name="PortDataGrid" HorizontalAlignment="Center" 
                       VerticalAlignment="Top" Height="175" Width="405">
                 <DataGrid.Columns>
@@ -196,30 +203,35 @@
                 </DataGrid.Columns>
 
                 <!-- Column Header text and Binding-->
-               
-               
-               
+
+
+
             </DataGrid>
 
         </Grid>
-        
+
         <!-- Finish and Cancel Buttons-->
         <Grid Grid.Row="3">
             <Button
                 Grid.Row="3"
                 Name="Cancel"
                 Content="Cancel"
-                Margin="575,10,150,22"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Right"
+                Width="70"
+                Margin="0,0,150,0"
                 Click="Cancel_Click"
             />
 
             <Button
-                Grid.Row="3"
                 Name="Finish"
                 Content="Finish"
-                Margin="670,10,55,22"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Right"
+                Width="70"
+                Margin="0,0,50,0"
                 Click="Finish_Click"
-                IsEnabled="{Binding Path=FinishEnable}"
+                IsEnabled="{Binding Path=FinishEnable}" 
                 
             />
         </Grid>
