--- a/VHDLGenerator/Views/Window_Component.xaml
+++ b/VHDLGenerator/Views/Window_Component.xaml
@@ -179,6 +179,7 @@
                     Height="20"
                     Margin="0,10"
                     Content="Add Port"
+                    Click="AddPort_Click"
                     IsEnabled="{Binding Path=AddPortEnable}"
                 />
 
