--- a/VHDLGenerator/Templates/DataPathTemplate.tt
+++ b/VHDLGenerator/Templates/DataPathTemplate.tt
@@ -20,50 +20,59 @@ end <#=Name #>;
 architecture <#= ArchName #> of <#=Name #> is
 
 <#
-	foreach(ComponentModel component in Components)
-	{
+    if(Components!= null)
+    {
+        foreach(ComponentModel component in Components)
+        {
 #>
-component <#= component.Name #>
+component <#=                component.Name #>
   Port(<#
-		foreach(string port in PortTranslation(component.Ports))
-		{
-#> <#=port#>
+            foreach(string port in PortTranslation(component.Ports))
+            {
+#> <#=                    port#>
 <#
-		}
+            }
 #>
 end component;
 
 <#
-	}
+        }
+    }
 #>
 <#
-	foreach(string signal in SignalData)
-	{
+    if(SignalData!= null)
+    {
+        foreach(string signal in SignalData)
+        {
 #>
-<#=signal#>
+<#=         signal#>
 <#
-	}
+        }
+    }
 #>
 
 begin
 
 <#
-    foreach(ComponentModel component in Components)
+    if(Components!= null)
     {
-        if(component.ID != null)
+        foreach(ComponentModel component in Components)
         {
+            if(component.ID != null)
+            {
 #>
 cop<#=component.ID #> : <#=component.Name #>
  port map(<#
-            foreach(string s in PortMappingProcess(component,Signals,Name))
-            {
-#> <#=s #>
+                foreach(string s in PortMappingProcess(component,Signals,Name))
+                {
+#> <#=              s #>
 <#
+                }
             }
-        }
 #>
 
 <#
+        }
     }
  #>
 
