code tree view shows all created files and can ope with button click

--- a/VHDLGenerator/Templates/DataPathTemplate.tt
+++ b/VHDLGenerator/Templates/DataPathTemplate.tt
@@ -8,9 +8,12 @@ library IEEE;
 use IEEE.STD_LOGIC_1164.ALL;
 
 entity <#if(Name != null){#><#=Name #> <#;} #>is
-  Port(<# 
+<# 
 			if(Ports!= null)
 			{
+#>
+  Port(
+<#
 				foreach(string port in MainPortsData)
 				{#> <#= port #> 
 <#				}
