Port mapping generation fixed but pervious signals are being over written by the newly created signals. Case where there exist one port has been include

--- a/VHDLGenerator/Templates/ComponentTemplate.tt
+++ b/VHDLGenerator/Templates/ComponentTemplate.tt
@@ -7,13 +7,17 @@ library IEEE;
 use IEEE.STD_LOGIC_1164.ALL;
 
 entity <#if(Name != null){#><#=Name #> <#;} #> is
-  Port(<# 
+<# 
 			if(Ports!= null)
 			{
+#>
+  Port(<#
 				foreach(string port in CompPortsData)
-				{#> <#= port #> 
+				{
+#> <#= port #> 
 <#				}
-			}#>
+			}
+#>
 end <#=Name #>;
 
 architecture <#= ArchName #> of <#=Name #> is
