--- a/VHDLGenerator/Views/Window_Datapath.xaml
+++ b/VHDLGenerator/Views/Window_Datapath.xaml
@@ -193,9 +193,9 @@
 
             <!-- DataGrid to display the port data -->
             <DataGrid Name="PortDataGrid" HorizontalAlignment="Center" 
-                      VerticalAlignment="Top" Height="175" Width="405">
+                      VerticalAlignment="Top" Height="175" Width="405" >
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Port Name" IsReadOnly="True" Width="100" Binding="{Binding Name}"/>
+                    <DataGridTextColumn Header="Port Name" IsReadOnly="False" Width="100" Binding="{Binding Name}"/>
                     <DataGridTextColumn Header="Direction" Width="100" Binding="{Binding Direction}"/>
                     <DataGridCheckBoxColumn Header="Bus" Width="100" Binding="{Binding Bus}"/>
                     <DataGridTextColumn Header="MSB" Width="50" Binding="{Binding MSB}"/>
