--- a/VHDLGenerator/Views/Window_Datapath.xaml
+++ b/VHDLGenerator/Views/Window_Datapath.xaml
@@ -193,14 +193,21 @@
 
             <!-- DataGrid to display the port data -->
             <DataGrid Name="PortDataGrid" HorizontalAlignment="Center" 
-                      VerticalAlignment="Top" Height="175" Width="405" >
+                      VerticalAlignment="Top" Height="175" Width="405" IsReadOnly="True" AutoGenerateColumns="False" ItemsSource="{Binding Path=GetPorts}" >
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Port Name" IsReadOnly="False" Width="100" Binding="{Binding Name}"/>
+                    <DataGridTextColumn Header="Port Name" Width="100" Binding="{Binding Name}"/>
                     <DataGridTextColumn Header="Direction" Width="100" Binding="{Binding Direction}"/>
                     <DataGridCheckBoxColumn Header="Bus" Width="100" Binding="{Binding Bus}"/>
                     <DataGridTextColumn Header="MSB" Width="50" Binding="{Binding MSB}"/>
                     <DataGridTextColumn Header="LSB" Width="50" Binding="{Binding LSB}"/>
                 </DataGrid.Columns>
+
+                <DataGrid.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Name="EditPort" Header="Edit" Click="EditPort_Click"/>
+                        <MenuItem Name="DeletePort" Header="Delete" Click="DeletePort_Click"/>
+                    </ContextMenu>
+                </DataGrid.ContextMenu>
 
                 <!-- Column Header text and Binding-->
 
