still displays the blank row but it also does that for getports binding

--- a/VHDLGenerator/Views/Window_Datapath.xaml
+++ b/VHDLGenerator/Views/Window_Datapath.xaml
@@ -192,9 +192,16 @@
 
 
             <!-- DataGrid to display the port data -->
-            <DataGrid Name="PortDataGrid" HorizontalAlignment="Center" 
-                      VerticalAlignment="Top" Height="175" Width="410"  ItemsSource="{Binding GetPorts}">
-               
+            <DataGrid Name="PortDataGrid"  
+                      VerticalAlignment="Top" Height="175" Width="408" HorizontalAlignment="Center" ItemsSource="{Binding Datagrid}" AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Port Name" Width="100" Binding="{Binding Name}"/>
+                    <DataGridTextColumn Header="Direction" Width="100" Binding="{Binding Direction}"/>
+                    <DataGridCheckBoxColumn Header="Bus" Width="100" Binding="{Binding Bus}"/>
+                    <DataGridTextColumn Header="MSB" Width="50" Binding="{Binding MSB}"/>
+                    <DataGridTextColumn Header="LSB" Width="50" Binding="{Binding LSB}"/>
+                </DataGrid.Columns>
+
 
                 <!-- Column Header text and Binding-->
 
